[package]
name = "ace"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
derive_more = "2.0.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
uuid = "1.17.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.142"




